syntax = "proto3";
package proto;

option go_package = ".;proto";

service HelloService  {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

// The response message containing the greetings
message HelloResponse {
  string greeting = 1;
}